scala/free-foil/src/main/java/org/syntax/lambdapi/simple/SimpleParser.g4
// -*- Java -*- File generated by the BNF Converter (bnfc 2.9.6).

// Parser definition for use with ANTLRv4
parser grammar SimpleParser;

options {
  tokenVocab = SimpleLexer;
}


start_Program returns [ org.syntax.lambdapi.simple.Absyn.Program result ]
  : x=program EOF
    { $result = $x.result; }
  ;
start_Command returns [ org.syntax.lambdapi.simple.Absyn.Command result ]
  : x=command EOF
    { $result = $x.result; }
  ;
start_ListCommand returns [ org.syntax.lambdapi.simple.Absyn.ListCommand result ]
  : x=listCommand EOF
    { $result = $x.result; }
  ;
start_Term returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : x=term EOF
    { $result = $x.result; }
  ;
start_Term1 returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : x=term1 EOF
    { $result = $x.result; }
  ;
start_Term2 returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : x=term2 EOF
    { $result = $x.result; }
  ;

program returns [ org.syntax.lambdapi.simple.Absyn.Program result ]
  : p_1_1=listCommand
    { $result = new org.syntax.lambdapi.simple.Absyn.AProgram($p_1_1.result); }
  ;
command returns [ org.syntax.lambdapi.simple.Absyn.Command result ]
  : Surrogate_id_SYMB_6 p_1_2=term Surrogate_id_SYMB_0 p_1_4=term
    { $result = new org.syntax.lambdapi.simple.Absyn.CommandCheck($p_1_2.result,$p_1_4.result); }
  | Surrogate_id_SYMB_7 p_2_2=term Surrogate_id_SYMB_0 p_2_4=term
    { $result = new org.syntax.lambdapi.simple.Absyn.CommandCompute($p_2_2.result,$p_2_4.result); }
  ;
listCommand returns [ org.syntax.lambdapi.simple.Absyn.ListCommand result ]
  :  /* empty */
    { $result = new org.syntax.lambdapi.simple.Absyn.ListCommand(); }
  | p_2_1=listCommand p_2_2=command Surrogate_id_SYMB_1
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
term returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : Surrogate_id_SYMB_9 p_1_2=IDENT Surrogate_id_SYMB_2 p_1_4=term
    { $result = new org.syntax.lambdapi.simple.Absyn.Lam($p_1_2.getText(),$p_1_4.result); }
  | Surrogate_id_SYMB_8 Surrogate_id_SYMB_3 p_2_3=IDENT Surrogate_id_SYMB_0 p_2_5=term Surrogate_id_SYMB_4 Surrogate_id_SYMB_5 p_2_8=term
    { $result = new org.syntax.lambdapi.simple.Absyn.Pi($p_2_3.getText(),$p_2_5.result,$p_2_8.result); }
  | p_3_1=term1
    { $result = $p_3_1.result; }
  ;
term1 returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : p_1_1=term1 p_1_2=term2
    { $result = new org.syntax.lambdapi.simple.Absyn.App($p_1_1.result,$p_1_2.result); }
  | p_2_1=term2
    { $result = $p_2_1.result; }
  ;
term2 returns [ org.syntax.lambdapi.simple.Absyn.Term result ]
  : p_1_1=IDENT
    { $result = new org.syntax.lambdapi.simple.Absyn.Var($p_1_1.getText()); }
  | Surrogate_id_SYMB_3 p_2_2=term Surrogate_id_SYMB_4
    { $result = $p_2_2.result; }
  ;
